plugins {
	id 'org.springframework.boot' version '4.0.0'
	id 'io.spring.dependency-management' version '1.1.7'
    id 'java'
    id 'idea'
    id 'jacoco'
    id "org.sonarqube" version "7.2.1.6560"
    id "org.openapi.generator" version "7.7.0"
}

group = 'ch.uzh.ifi.hasel'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
    developmentOnly
    runtimeClasspath {
        extendsFrom developmentOnly
    }
}

repositories {
	mavenCentral()
}

springBoot {
    mainClass.set('ch.uzh.ifi.hase.soprafs26.Application')
}

dependencies {
    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
    testAnnotationProcessor 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
    testAnnotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'

    // Provides the documentation API
    implementation 'io.github.springwolf:springwolf-stomp:2.1.0'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.2'

    // Provides the UI for springwolf- optional
    runtimeOnly 'io.github.springwolf:springwolf-ui:2.1.0'

	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    implementation 'org.springframework.boot:spring-boot-starter-json'
    implementation 'org.springframework.boot:spring-boot-h2console'

    implementation 'org.springframework.security:spring-security-crypto'

    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'com.h2database:h2'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'   
    testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

bootJar {
    archiveFileName = "${archiveBaseName.get()}.${archiveExtension.get()}"
}

sonar {
    properties {
        property "sonar.projectKey", System.getenv("SONAR_PROJECT_KEY")
        property "sonar.organization", System.getenv("SONAR_ORGANIZATION")
        property "sonar.host.url", "https://sonarcloud.io"
        property "sonar.exclusions", "build/**"
    }
}

openApiGenerate {
    generatorName = "spring"
    inputSpec = "$rootDir/src/main/resources/static/karaokee-openapi.json"
    outputDir = "$buildDir/generated"
    apiPackage = "ch.uzh.ifi.hase.soprafs26.controller"
    modelPackage = "ch.uzh.ifi.hase.soprafs26.rest.dto"
    globalProperties = [
        apis           : "",
        supportingFiles: ""
    ]
    configOptions = [
        useSpringBoot3  : "true",
        interfaceOnly   : "true",
        useTags         : "true",
        openApiNullable : "false"
    ]
}

sourceSets {
    main {
        java {
            srcDir "$buildDir/generated/src/main/java"
        }
    }
}

compileJava.dependsOn tasks.openApiGenerate

jacocoTestReport {
    reports {
        xml.required = true
    }
}

test {
    useJUnitPlatform()
    testLogging.showStandardStreams = true
    maxParallelForks = 1
}

File secretPropsFile = file('./local.properties')
if (secretPropsFile.exists()) {
    Properties p = new Properties()
    p.load(new FileInputStream(secretPropsFile))
    p.each { name, value ->
        ext[name] = value
    }
}

defaultTasks 'bootJar', 'build'
